implemented lookup config class in tests