@@ -1,48 +1,44 @@
 package uk.gov.hmcts.reform.fpl.service.email.content;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import uk.gov.hmcts.reform.fpl.config.LocalAuthorityNameLookupConfiguration;
+import org.springframework.test.util.ReflectionTestUtils;
+import uk.gov.hmcts.reform.fpl.service.config.LookupTestConfig;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
+import javax.annotation.PostConstruct;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.BDDMockito.given;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.emptyCaseDetails;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.populatedCaseDetails;
 
-@ActiveProfiles("integration-test")
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(classes = {GatekeeperEmailContentProvider.class})
-@ContextConfiguration(classes = {JacksonAutoConfiguration.class})
-class GatekeeperEmailContentProviderTest {
-    private static final String LOCAL_AUTHORITY_CODE = "example";
-
-    @MockBean
-    private LocalAuthorityNameLookupConfiguration localAuthorityNameLookupConfiguration;
+@ContextConfiguration(classes = {JacksonAutoConfiguration.class, LookupTestConfig.class})
+class GatekeeperEmailContentProviderTest extends AbstractEmailContentProviderTest {
 
     @Autowired
     private GatekeeperEmailContentProvider gatekeeperEmailContentProvider;
 
+    @PostConstruct
+    void setField() {
+        ReflectionTestUtils.setField(gatekeeperEmailContentProvider, "uiBaseUrl", BASE_URL);
+    }
+
     @Test
     void shouldReturnExpectedMapWithValidCaseDetails() throws IOException {
-        List<String> ordersAndDirections = ImmutableList.of("Emergency protection order",
-            "Contact with any named person");
+        List<String> ordersAndDirections = List.of("Emergency protection order", "Contact with any named person");
+
         Map<String, Object> expectedMap = ImmutableMap.<String, Object>builder()
-            .put("localAuthority", "Example Local Authority")
+            .put("localAuthority", LOCAL_AUTHORITY_NAME)
             .put("dataPresent", "Yes")
             .put("fullStop", "No")
             .put("ordersAndDirections", ordersAndDirections)
@@ -51,12 +47,9 @@ class GatekeeperEmailContentProviderTest {
             .put("urgentHearing", "Yes")
             .put("nonUrgentHearing", "No")
             .put("firstRespondentName", "Smith")
-            .put("reference", "12345")
-            .put("caseUrl", String.format("http://fake-url/case/%s/%s/%s", JURISDICTION, CASE_TYPE, "12345"))
+            .put("reference", CASE_REFERENCE)
+            .put("caseUrl", buildCaseUrl(CASE_REFERENCE))
             .build();
-
-        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
-            .willReturn("Example Local Authority");
 
         assertThat(gatekeeperEmailContentProvider.buildGatekeeperNotification(populatedCaseDetails(),
             LOCAL_AUTHORITY_CODE)).isEqualTo(expectedMap);
@@ -65,7 +58,7 @@ class GatekeeperEmailContentProviderTest {
     @Test
     void shouldReturnSuccessfullyWithEmptyCaseDetails() throws IOException {
         Map<String, Object> expectedMap = ImmutableMap.<String, Object>builder()
-            .put("localAuthority", "Example Local Authority")
+            .put("localAuthority", LOCAL_AUTHORITY_NAME)
             .put("dataPresent", "No")
             .put("fullStop", "Yes")
             .put("ordersAndDirections", "")
@@ -75,11 +68,8 @@ class GatekeeperEmailContentProviderTest {
             .put("nonUrgentHearing", "No")
             .put("firstRespondentName", "")
             .put("reference", "123")
-            .put("caseUrl", String.format("http://fake-url/case/%s/%s/%s", JURISDICTION, CASE_TYPE, "123"))
+            .put("caseUrl", buildCaseUrl("123"))
             .build();
-
-        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
-            .willReturn("Example Local Authority");
 
         assertThat(gatekeeperEmailContentProvider.buildGatekeeperNotification(emptyCaseDetails(),
             LOCAL_AUTHORITY_CODE)).isEqualTo(expectedMap);
